fix(CI): update CI for running on ubuntu-latest

--- a/.github/workflows/criterion-ci.yml
+++ b/.github/workflows/criterion-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   criterion:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
 
     steps:
