--- a/.github/workflows/mirroring.yml
+++ b/.github/workflows/mirroring.yml
@@ -1,4 +1,4 @@
-name: Epitech Repository Mirroring
+name: Chocolatine
 
 on:
   push:
@@ -7,50 +7,110 @@ on:
     branches: "**"
   workflow_dispatch:
 
+env:
+  MIRROR_URL: ${{ secrets.REPO_URL_PROD }}
+  EXECUTABLES: "libcuddle.a"
+
 jobs:
-  compile_and_test:
-    name: Compilation et Tests
+  check_coding_style:
+    if: ${{ !startsWith(github.ref_name, 'ga-ignore-') }}
+    name: Checking coding style
     runs-on: ubuntu-latest
-    container: epitechcontent/epitest-docker:latest
-    
+    container: ghcr.io/epitech/coding-style-checker:latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      - name: Verify required files
-        id: verify_files
+      - name: Run coding style checker
+        run: /usr/local/bin/check.sh . ~/reports
+
+      - name: Filter Out Ignored Files
+        run: grep -v './lib/libshell.a' ~/reports/coding-style-reports.log > ~/reports/filtered-reports.log || true
+
+      - name: Display Filtered Report Log
+        run: cat ~/reports/filtered-reports.log
+
+      - name: Check Coding Style Output
         run: |
-          if [ ! -f "Makefile" ]; then
-            echo "Error: Makefile does not exist!"
+          if [ -s ~/reports/filtered-reports.log ]; then
+            echo "### Coding Style Checker Report 🚀" >> $GITHUB_STEP_SUMMARY
+            echo "| Total Errors 🚨 | Major Errors ❗ | Minor Errors ⚠️ | Info Messages ℹ️ |" >> $GITHUB_STEP_SUMMARY
+            echo "|-----------------|-----------------|------------------|------------------|" >> $GITHUB_STEP_SUMMARY
+            echo "| **Total:** $(wc -l < ~/reports/filtered-reports.log) | **Major:** $(grep -c ": MAJOR:" ~/reports/filtered-reports.log) | **Minor:** $(grep -c ": MINOR:" ~/reports/filtered-reports.log) | **Info:** $(grep -c ": INFO:" ~/reports/filtered-reports.log) |" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "$(cat ~/reports/filtered-reports.log)" >> $GITHUB_STEP_SUMMARY
+            
+            # Also output errors as annotations for GitHub UI
+            while IFS= read -r line; do
+              file=$(echo "$line" | cut -d ':' -f 1)
+              line_num=$(echo "$line" | cut -d ':' -f 2)
+              error=$(echo "$line" | cut -d ':' -f 3-)
+              echo "::error file=$file,line=$line_num::$error"
+            done < ~/reports/filtered-reports.log
+            
             exit 1
+          else
+            echo "No coding style issues found. ✔️ " >> $GITHUB_STEP_SUMMARY
+            exit 0
           fi
-          if [ ! -d "src" ]; then
-            echo "Error: Source directory 'src' does not exist!"
-            exit 1
-          fi
-          echo "All required files are present."
+
+  check_program_compilation:
+    if: ${{ !startsWith(github.ref_name, 'ga-ignore-') && success() }}
+    name: Checking that the program compiles correctly
+    runs-on: ubuntu-latest
+    container: epitechcontent/epitest-docker:latest
+    needs: check_coding_style
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Build project
         id: build
-        run: |
-          make
-          if [ ! -f "mysh" ]; then
-            echo "Error: Build failed. Binary 'mysh' does not exist."
-            exit 1
-          fi
-          echo "Build successful. Binary 'mysh' is present."
+        timeout-minutes: 2
+        run: make
 
-      - name: Run unit tests
-        id: tests
-        run: |
-          output=$(make tests_run || true)
+      - name: Clean project
+        run: make clean
 
-  repository_mirroring:
-    name: Mirroring vers Epitech
+      - name: Verify executables
+        run: |
+          IFS=',' read -ra EXEC_ARRAY <<< "$EXECUTABLES"
+          for exec_path in "${EXEC_ARRAY[@]}"; do
+            if [ ! -f "$exec_path" ]; then
+              echo "::error::Executable '$exec_path' does not exist"
+              exit 1
+            fi
+            if [ ! -x "$exec_path" ]; then
+              echo "::error::File '$exec_path' is not executable"
+              exit 1
+            fi
+            echo "Executable '$exec_path' exists and is executable"
+          done
+
+  run_tests:
+    name: Running tests
     runs-on: ubuntu-latest
-    needs: [ compile_and_test ]
-    if: ${{ success() && github.event_name == 'push' }}
-    
+    container: epitechcontent/epitest-docker:latest
+    needs: check_program_compilation
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Run tests
+        timeout-minutes: 2
+        run: make tests_run
+
+  push_to_mirror:
+    if: ${{ !startsWith(github.ref_name, 'ga-ignore-') && github.event_name == 'push' && success() }}
+    name: Pushing to the mirror repository
+    runs-on: ubuntu-latest
+    needs: run_tests
     steps:
       - name: Checkout repository with full history
         uses: actions/checkout@v4
@@ -65,5 +125,5 @@ jobs:
       - name: Repository mirroring
         uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: ${{ secrets.REPO_URL_PROD }}
+          target_repo_url: ${{ env.MIRROR_URL }}
           ssh_private_key: ${{ secrets.MIRROR_KEY }}
