--- a/.github/workflows/criterion-ci.yml
+++ b/.github/workflows/criterion-ci.yml
@@ -1,13 +1,18 @@
-name: Compilation and Unit Tests
+name: Mirroring Repository
 
 on:
   push:
     branches: "**"
   pull_request:
     branches: "**"
+  workflow_dispatch:
+
+env:
+  MIRROR_URL: ${{ secrets.REPO_URL_PROD }}
 
 jobs:
   criterion:
+    if: ${{ !startsWith(github.ref_name, 'ga-ignore-') }}
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker:latest
 
@@ -40,3 +45,31 @@ jobs:
         id: tests
         run: |
           output=$(make tests_run || true)
+
+  push_to_mirror:
+    if: ${{ !startsWith(github.ref_name, 'ga-ignore-') && github.event_name == 'push' && success() }}
+    name: Pushing to the mirror repository
+    runs-on: ubuntu-latest
+    needs: criterion
+    steps:
+      - name: Checkout repository with full history
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "Host github.com
+          StrictHostKeyChecking no" > ~/.ssh/config
+      
+      - name: Repository mirroring
+        uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: ${{ env.MIRROR_URL }}
+          ssh_private_key: ${{ secrets.MIRROR_KEY }}
